--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node todolist"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cors": "^2.5.3",
     "ejs": "*",
     "express": "3.1.0",
